# cython-sgio

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pre-commit.yml
src/: linux_sgio.pyx
