[metadata]
name = cython-sgio
description = Cython-based wrapper for sending SCSI Generic I/O commands from Python.
url = https://github.com/python-scsi/cython-sgio
license_files =
   AUTHORS
   lgpl-2.1.txt
long_description = file:README.md
long_description_content_type: text/markdown
maintainer = Diego Elio Pettenò
maintainer_email = flameeyes@flameeyes.com
platforms =
    linux
license = LGPL-2.1+
keywords =
    scsi
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
