# SPDX-FileCopyrightText: 2020 The cython-sgio Authors
#
# SPDX-License-Identifier: LGPL-2.1-or-later

[metadata]
name = cython-sgio
description = Cython-based wrapper for sending SCSI Generic I/O commands from Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/python-scsi/cython-sgio
maintainer = Diego Elio Pettenò
maintainer_email = flameeyes@flameeyes.com
license = LGPL-2.1+
license_files =
    AUTHORS
    LICENSES/*
platforms =
    linux
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    scsi

[options]
packages = find:

[options.extras_require]
dev =
    Cython
    mypy
    pre-commit
    setuptools>=42
    setuptools_scm[toml]>=3.4
    wheel

[options.package_data]
* =
    *.pyx
    *.pxd

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
